fix: align bottom of table with bottom of screen

--- a/_scratch/table_selection/style.css
+++ b/_scratch/table_selection/style.css
@@ -58,7 +58,7 @@ table {
     /* margin: auto; */
     width: max-content;
     border: 3px solid var(--mellow);
-
+    height: auto;
 
 }
 
@@ -110,7 +110,7 @@ label {
     overflow: auto;
     white-space: nowrap;
     max-width: 100%;
-    max-height: 100%;
+    max-height: calc(100vh - 8rem);
 }
 
 .row_name {
